components/devfile-node-sample-multi-component-example-main-pzfm/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: multi-component-application
    appstudio.openshift.io/component: devfile-node-sample-multi-component-example-main-pzfm
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eldevfile-node-sample-multi-component-example-main-pzfm
  namespace: e2e-demo-qxhh
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-devfile-node-sample-multi-component-example-main-pzfm
    weight: null
status: {}
